samples/_failures_safe/1761153651_78cf48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cad564c3.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_cad564c3.c:162:48: error: expected ‘)’ at end of input
  162 |         printf("Found string: \"%s\"\n", parser
      |               ~                                ^
      |                                                )
./samples/SAFE/__tmp_cad564c3.c:162:9: error: expected declaration or statement at end of input
  162 |         printf("Found string: \"%s\"\n", parser
      |         ^~~~~~
./samples/SAFE/__tmp_cad564c3.c:162:9: error: expected declaration or statement at end of input
